History of changes of the RapidMiner versions
====================================================

Changes from RapidMiner 5.0 to 5.1
----------------------------------

 * Added annotations to IOObjects
 * Versioned operators allow easier updates
 * Added new Operators: 
   - Print to Console
   - Unset Macro
 * Revised import wizards
 * Added Process Profiling
 * Added Support for R Extension
 
 Major Bugfixes:
 * Fixed memory leak causing RapidMiner to run out of memory if processed many and large example sets
 * Readded descriptive error messages  

Changes from RapidMiner 5.0beta to RapidMiner 5.0 [2009/12/8]
---------------------------------------------------------------
  * Added an operator for performing a local polynomial regression
  
  * Added an operator for calculating weights using a local polynomial regression.

  * Added an operator for extracting the cluster centroids or prototypes from a flat cluster model.
  
  * Added an operator for calculating the cross distances between example sets.

Changes from RapidMiner 4.5 to RapidMiner 5.0beta [2009/09/30]
---------------------------------------------------------------

  * Redesigned graphical user interface comprising a docking
  	framework to freely layout GUI components and save
  	different layouts in multiple perspectives.
  
  * New visual representation of processes, i.e. a graph-based
    flow layout which allows to define and observe the actual
    data flows in processes in a very intuitive way.
    
  * Added automatic generation, propagation and transformation
    of meta data simulating the actual data handling in
    RapidMiner at design time allows for much less error-prone
    process design. Quickfixes provide hints and solutions in
    case of inaccurate parameter settings, erroneous operator
    usage, etc.
    
  * Added repository module allowing to conveniently store,
    manage and archive processes, data, models and any other
    arbitrary data object in RM.
    