@@ -239,6 +239,9 @@ error.158.name  = Wrong SQL type
 error.158.short = Cannot parse value ''{0}'' for parameter type ''{1}''.
 error.158.long  = You specified an SQL type for a query. However, the value filled in at this place cannot be parsed accordingly. You must either change the type or use another value.
 
+error.159.name  = No such element
+error.159.short = Collection size is {1}, requested element index is {0}.
+error.159.long  = You selected an element from a collection whose index is larger than the number of elements in the list.
 #
 # Group 200: parameters
 #
