@@ -12,6 +12,7 @@ Changes from RapidMiner 5.0 to 5.1
  * Revised import wizards
  * Added Process Profiling
  * Added Support for R Extension
+ * Added new boolean GUI property rapidminer.gui.fetch_data_base_table_names which suppresses to fetch data base table names in the SQLQueryBuilder
  
  Major Bugfixes:
  * Fixed memory leak causing RapidMiner to run out of memory if processed many and large example sets
